Refactor code structure for improved readability and maintainability
analysis student grades & bank account

--- a/SQL.ipynb
+++ b/SQL.ipynb
@@ -2338,6 +2338,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6009221b",
+   "metadata": {},
+   "source": [
+    "# 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1acde665",
+   "metadata": {},
+   "source": [
+    "\n",
+    "import duckdb\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Connect to DuckDB\n",
+    "conn = duckdb.connect(database=':memory:', read_only=False)\n",
+    "\n",
+    "data = {\n",
+    "    'StudentID': [101, 102, 103, 104, 105],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve'],\n",
+    "    'Math_Score': [85, 90, 78, 92, 88],\n",
+    "    'Science_Score': [90, 85, 80, 95, 82],\n",
+    "    'English_Score': [88, 92, 85, 89, 90],\n",
+    "    'History_Score': [70, 65, 95, 100, np.nan] # Eve missed the History test\n",
+    "}\n",
+    "\n",
+    "grades_df = pd.DataFrame(data)\n",
+    "\n",
+    "# Register for SQL\n",
+    "conn.register('grades', grades_df)\n",
+    "\n",
+    "print(\"--- Grades Table (Wide Format) ---\")\n",
+    "print(grades_df)\n",
+    "```\n",
+    "\n",
+    "### Your Tasks\n",
+    "\n",
+    "1.  **Reshape (Wide to Long):**\n",
+    "      * **Pandas:** Use `pd.melt()` to transform the DataFrame so that instead of separate columns for each subject, you have two new columns: `Subject` and `Score`. (Keep `StudentID` and `Name` as identifier variables).\n",
+    "      * **SQL:** Use the `UNPIVOT` statement to achieve the same result.\n",
+    "2.  **Analysis:**\n",
+    "      * After reshaping, remove any rows where the `Score` is `NaN`.\n",
+    "      * Calculate the **average score per subject**.\n",
+    "3.  **Filtering:**\n",
+    "      * Find the name of the student who has the **highest score in 'Math\\_Score'** specifically.\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "## 2\\. 💳 Problem 7: Bank Account Analysis (Window Functions)\n",
+    "\n",
+    "**Concept:** This problem focuses on order-dependent calculations, such as running balances and comparing a row to the previous row.\n",
+    "\n",
+    "### Setup Code\n",
+    "\n",
+    "Run this to create the data.\n",
+    "\n",
+    "```python\n",
+    "data = {\n",
+    "    'AccountID': [1, 1, 1, 1, 1, 2, 2, 2, 2],\n",
+    "    'TransactionDate': pd.to_datetime([\n",
+    "        '2025-01-01', '2025-01-02', '2025-01-05', '2025-01-10', '2025-01-12',\n",
+    "        '2025-01-01', '2025-01-03', '2025-01-04', '2025-01-08'\n",
+    "    ]),\n",
+    "    'Type': ['Deposit', 'Withdrawal', 'Deposit', 'Withdrawal', 'Deposit', 'Deposit', 'Withdrawal', 'Withdrawal', 'Deposit'],\n",
+    "    'Amount': [1000, -200, 500, -1200, 300, 2000, -500, -100, 600]\n",
+    "}\n",
+    "\n",
+    "bank_df = pd.DataFrame(data)\n",
+    "\n",
+    "# Register for SQL\n",
+    "conn.register('transactions', bank_df)\n",
+    "\n",
+    "print(\"\\n--- Bank Transactions Table ---\")\n",
+    "print(bank_df)\n",
+    "```\n",
+    "\n",
+    "### Your Tasks\n",
+    "\n",
+    "1.  **Running Balance (Cumulative Sum):**\n",
+    "      * Calculate the **Running Balance** for each `AccountID` ordered by `TransactionDate`.\n",
+    "      * *Pandas Hint:* `.groupby().cumsum()`\n",
+    "      * *SQL Hint:* `SUM() OVER (PARTITION BY ... ORDER BY ...)`\n",
+    "2.  **Previous Transaction Comparison (Lag):**\n",
+    "      * Create a new column called `PreviousAmount` that shows the amount of the *previous* transaction for that specific account.\n",
+    "      * *Pandas Hint:* `.groupby().shift()`\n",
+    "      * *SQL Hint:* `LAG() OVER (...)`\n",
+    "3.  **Alerting:**\n",
+    "      * Identify any rows where the **Running Balance** drops below 200.\n",
+    "\n",
+    "Good luck\\! Let me know if you want the solution for either of these."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a8b581e4",
    "metadata": {},
    "source": [
